--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,14 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+# Project maven configuration
+BINTRAY_REPO=maven
+VERSION=1.0.0
+GROUP_ID=com.lizhenhua.fast
+SITE_URL=https://github.com/qq877693928/Fast
+GIT_URL=https://github.com/qq877693928/Fast.git
+DEVELOPER_ID=lizhenhua
+DEVELOPER_NAME=lizhenhua2003
+DEVELOPER_EMAIL=lizhenhua2003@gmail.com
+LICENSE_NAME=The Apache Software License, Version 2.0
+LICENSE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
