--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ captures/
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/.idea/codeStyles
 .DS_Store
 /build
 .idea/
