--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -46,3 +46,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
+
+fast {
+    enable = true
+}
