--- a/fast-plugin/build.gradle
+++ b/fast-plugin/build.gradle
@@ -10,8 +10,8 @@ java {
 
 dependencies {
     implementation gradleApi()
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version"
+    compileOnly "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compileOnly "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version"
     implementation "com.android.tools.build:gradle:$agp_version"
     implementation "com.android.tools.build:builder:$agp_version"
 }
