--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     ext.bintray_version = "1.8.4"
     ext.maven_version = "2.1"
     repositories {
+        mavenLocal()
         google()
         jcenter()
     }
@@ -15,12 +16,13 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:$bintray_version"
         classpath "com.github.dcendents:android-maven-gradle-plugin:$maven_version"
-        classpath 'com.lizhenhua.fast:fast-plugin:1.2.0'
+        classpath 'com.lizhenhua.fast:fast-plugin:1.3.0'
     }
 }
 
 allprojects {
     repositories {
+        mavenLocal()
         google()
         jcenter()
     }
