策略模式支持静态方法和构造方法
Signed-off-by: lizhenhua <lizhenhua2003@gmail.com>

--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'com.lizhenhua.fast.plugin'
+//    id 'com.lizhenhua.fast.plugin'
 }
 
 android {
