--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-//    id 'com.lizhenhua.fast.plugin'
 }
 
 android {
@@ -40,10 +39,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
-    implementation 'com.lizhenhua.fast:fast-annotation:1.3.0'
-    implementation 'com.lizhenhua.fast:fast-runtime:1.3.0'
+    implementation 'io.github.qq877693928:fast-annotation:1.4.0'
+    implementation 'io.github.qq877693928:fast-runtime:1.4.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
+
+apply from: '../fast-log.gradle'
