--- a/build.gradle
+++ b/build.gradle
@@ -7,26 +7,20 @@ buildscript {
     ext.bintray_version = "1.8.4"
     ext.maven_version = "2.1"
     repositories {
-//        maven{url "file:///Users/lizhenhua/.m2/repository"}
-        mavenLocal()
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:$bintray_version"
-        classpath "com.github.dcendents:android-maven-gradle-plugin:$maven_version"
-//        classpath 'com.lizhenhua.fast:fast-plugin:1.3'
+        classpath 'io.github.qq877693928:fast-plugin:1.4.0'
     }
 }
 
 allprojects {
     repositories {
-//        maven{url "file:///Users/lizhenhua/.m2/repository"}
-        mavenLocal()
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
