--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ kotlin.code.style=official
 # Project maven configuration
 BINTRAY_REPO=maven
 VERSION=1.4.0
-GROUP_ID=com.lizhenhua.fast
+GROUP_ID=io.github.qq877693928
 SITE_URL=https://github.com/qq877693928/Fast
 GIT_URL=https://github.com/qq877693928/Fast.git
 DEVELOPER_ID=lizhenhua
@@ -30,3 +30,10 @@ DEVELOPER_NAME=lizhenhua2003
 DEVELOPER_EMAIL=lizhenhua2003@gmail.com
 LICENSE_NAME=The Apache Software License, Version 2.0
 LICENSE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+
+sonatype.username=lizhenhua
+sonatype.password=Ks@18600953585
+
+signing.keyId=0B579196
+signing.password=ks802621
+signing.secretKeyRingFile=/Users/lizhenhua/Documents/secring.png
