--- a/fast-log.gradle
+++ b/fast-log.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'com.lizhenhua.fast.plugin'
 
-subprojects { subProject ->
-    if (project.gradle.startParameter.taskNames.contains("Debug")) {
+allprojects { subProject ->
+    def taskName = project.gradle.startParameter.taskNames != null
+            ? project.gradle.startParameter.taskNames.toString() : "[]"
+    if (taskName.contains("Debug")) {
         fast {
             enable = true
         }
-    } else if (project.gradle.startParameter.taskNames.contains("Release")) {
+    } else if (taskName.contains("Release")) {
         fast {
             enable = false
         }
