--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -39,8 +39,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
-    implementation 'io.github.qq877693928:fast-annotation:2.2.0'
-    implementation 'io.github.qq877693928:fast-runtime:2.2.0'
+    implementation 'io.github.qq877693928:fast-annotation:2.4.0'
+    implementation project(path: ':android_lib')
+    implementation 'io.github.qq877693928:fast-runtime:2.4.0'
+
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
